--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,6 @@ header {
     display: flex;
     justify-content: space-between;
     background-color: #262626;
-    border-bottom: 10px solid #000 ;
     padding: 10px 20px;
 }
 
@@ -13,35 +12,47 @@ header {
     max-width: 60px;
 }
 
-.box-titulo {
-    display: inline-block;
-    position: absolute;
-    margin-top: 116px;
-    margin-left: 91px;
+.box {
     background-color: #262626;
     box-shadow: 10px 10px 0 black;
     text-align: center;
     padding: 42px 44px;
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'Press Start 2P', sans-serif;
     text-shadow:5px 5px #000;
 }
-.box-titulo .tittle {
+
+.box .title {
     margin-bottom: 28px;
     font-size: 40px;
     color: #FFB30f;  
 }
-.box-titulo .subtitle {
+.box .subtitle {
     font-size: 30px;
     color: #fff;
 }
 
-.bg {
-    position: absolute;
-    width: 100%;
-    height: 797px;
-    left: 0px;
-    top: 80px;
+.banner {
+    box-sizing: border-box;
+    height: 800px;
     background-image: url(../assets/img/sunset-horizon-scenery-landscape-art-uhdpaper.com-4K-178.jpg);
-    background-size: cover;
-    
+    background-size: 100%;
+    background-repeat: no-repeat;
+    border-bottom: 10px solid #000;
+    border-top: 10px solid #000;
+    padding-top: 115px;
+    padding-left: 90px;
+}
+
+.banner .wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 640px;
+}
+.banner .box {
+    margin-bottom: 40px;
+}
+
+.banner .navigation {
+    display: flex;
+    justify-content: space-around;
 }
