--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    background-color: #262626;
+    background-color: #f35b6c;
     padding: 10px 20px;
 }
 
