--- a/css/components/wrapper-project.css
+++ b/css/components/wrapper-project.css
@@ -16,8 +16,13 @@
     box-shadow: 10px 10px 0 #fff;
 }
 .wrapper-project .img {
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    top: 50%;
+    transform: translateY(-50%);
+    position: relative;
 }
 
 .box-project.-left {
